--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    hello World
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="js/base.js"></script>
 </body>
 </html>
